--- a/res/css/components/nav.less
+++ b/res/css/components/nav.less
@@ -258,6 +258,7 @@
         top: @nav-height;
         left: 0; right: 0;
         border-top: 1px solid #eaeaea;
+        max-width: 100vw;
         max-height: calc(100vh - @nav-height);
         background-color: white;
         z-index: -1;
